[workspace]
members = [
    "apis/c/*",
    "apis/c++/*",
    "apis/python/node",
    "apis/python/operator",
    "apis/rust/*",
    "apis/rust/operator/macros",
    "apis/rust/operator/types",
    "binaries/*",
    "examples/rust-dataflow/*",
    "examples/iceoryx/*",
    "examples/autoware-dataflow/ndt_localizer/src/voxel_grid_filter",
    "examples/autoware-dataflow/ndt_localizer/src/ndt_localizer",
    "examples/autoware-dataflow/localization/src/operators/imu_corrector",
    "examples/autoware-dataflow/localization/src/operators/gnss_poser",
    "examples/autoware-dataflow/localization/src/operators/map_height_fitter",
    "examples/autoware-dataflow/localization/src/operators/pose_initializer",
    "examples/autoware-dataflow/localization/src/operators/pointcloud_downsample",
    "examples/autoware-dataflow/localization/src/operators/ndt_scan_matcher",
    "examples/autoware-dataflow/localization/src/operators/gyro_odometer",
    "examples/autoware-dataflow/localization/src/operators/ekf_localizer",
    "examples/autoware-dataflow/localization/src/operators/stop_filter",
    "libraries/communication-layer/*",
    "libraries/core",
    "libraries/message",
    "libraries/extensions/download",
    "libraries/extensions/telemetry/*",
    "libraries/extensions/zenoh-logger",
]

[package]
name = "dora-examples"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"

[dev-dependencies]
eyre = "0.6.8"
tokio = "1.20.1"
dora-coordinator = { path = "binaries/coordinator" }
dunce = "1.0.2"

[[example]]
name = "c-dataflow"
path = "examples/c-dataflow/run.rs"

[[example]]
name = "rust-dataflow"
path = "examples/rust-dataflow/run.rs"

[[example]]
name = "rust-dataflow-url"
path = "examples/rust-dataflow-url/run.rs"

[[example]]
name = "cxx-dataflow"
path = "examples/c++-dataflow/run.rs"

[[example]]
name = "python-dataflow"
path = "examples/python-dataflow/run.rs"

[[example]]
name = "iceoryx"
path = "examples/iceoryx/run.rs"

[[example]]
name = "ndt-dataflow"
path = "examples/autoware-dataflow/ndt_localizer/run.rs"

[[example]]
name = "localization-dataflow"
path = "examples/autoware-dataflow/localization/run.rs"
