<?xml version="1.0"?>
<package format="3">
    <name>map_loader</name>
    <version>0.1.0</version>
    <description>map_loader package</description>
    <maintainer email="carl.liu@autocore.ai">carl liu</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>cereal_ros_msgs</build_depend>

    <!-- <test_depend>ament_lint_auto</test_depend>
    <test_depend>autoware_lint_common</test_depend> -->

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>