<?xml version="1.0"?>
<package format="3">
    <name>cereal_ros_msgs</name>
    <version>0.1.0</version>
    <description>The cereal_ros_msgs package</description>
    <maintainer email="carl.liu@autocore.ai">carl liu</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <build_depend>builtin_interfaces</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>diagnostic_msgs</build_depend>
    <build_depend>autoware_sensing_msgs</build_depend>
    <build_depend>tier4_debug_msgs</build_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>