<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pointcloud_downsample</name>
  <version>0.1.0</version>
  <description>The ROS2 pointcloud_downsample package</description>
  <maintainer email="carl.liu@autocore.ai">carl liu</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>autoware_cmake</build_depend>

  <depend>libpcl-all-dev</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>tier4_autoware_utils</depend>
  <depend>tier4_debug_msgs</depend>
  <depend>cereal_ros_msgs</depend>
  <depend>time_utils</depend>

  <!-- <test_depend>ament_lint_auto</test_depend> -->
  <!-- <test_depend>autoware_lint_common</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
